--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,19 +1,18 @@
 leabra todo list:
 
-* netview: layer line width needs to scale w/ units, always be outside them.
+* netview: 
   add netvar text
-  prjns not using cap loc, need to also scale with max?  sqrt?  smaller overall?
-    nlayers?
-  make xy square
+  prjns scale with max?  sqrt?  smaller overall? nlayers?
   get rid of crazy zmult stuff
   parameterize unit spacing: for large nets, small spacing is better..
+  unit labels not in right place
+
+* datatable: row manip functions like rowcopy, moverow, insert row, etc
 
 * v3convert: end up with 2 bias.unit links from copy op?
 
 * css: p voidfun = crash; bindargs seems to not be getting the void??
   e.g., p taMisc::include_paths.List();
-
-* do color network!
 
 * replace condlist with datatables -- just do all the ops on the datatables 
   directly; lots of datatableloops!
