--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -3,6 +3,17 @@ leabra todo list:
 commit:
 
 ------------------
+* gridview: unitize + global xform, have obj per column so you can click (maybe just header?),
+  auto-size blocks, fix auto-scale, 4dim unit display
+
+  * count image as 1x1 for display purposes -- is rescaled anyway?
+  * font computation not working for # of chars to display (too conservative)
+
+  - test case: filtered layer unit history moving back in depth w/ netview
+
+  - why doesn't gridview update with WriteClose()?
+
+------------------
 hv model
 
 * debug DMEM timing: add start/end timer with some flags on the control guy and use
@@ -30,14 +41,7 @@ for setting network stats vars on dmem_timing.
   cs association with good look decisions drives reward at t-1
 
 
-------------------
-* gridview: unitize + global xform, have obj per column so you can click (maybe just header?),
-  auto-size blocks, fix auto-scale, 4dim unit display
-
-  - test case: filtered layer unit history moving back in depth w/ netview
-
-  - why doesn't gridview update with WriteClose()?
-
+--------------------
 * netview: 
 
  * make xydrag handles thicker: create new default image by replacing existing
