minor fix for loading old projects w/out crashing..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -6,6 +6,7 @@ commit:
 * gridview: 
 
   - when editing a datatable_impl, need to send refresh update to display
+  - initial panel is not updated..  just stick in render_impl and be done with it??
   - view at is too far zoomed out -- can't seem to fix this at all, any way I try..
   - colorscale changes not sending signal
   - not properly saving/loading 4d data!
