minor bug fixes: network build/connect no longer call UpdateMonitors -- this is done in programs anyway and causes loss of data problems during loading; also added minimum font size to gridview.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,19 +5,14 @@ commit:
 ------------------
 * gridview: 
 
-  - min font size -- at end just enforce font_size > val
   - struct update debug on hv model
   - when editing a datatable_impl, need to send refresh update to display
   - initial panel is not updated..  just stick in render_impl and be done with it??
   - view at is too far zoomed out -- can't seem to fix this at all, any way I try..
   - colorscale changes not sending signal
-  - not properly saving/loading 4d data!
 
   - all views: add bool for draggers (in gridview; only active for structural re-init)
   - all views: set color spec button in panel (in gridview)
-
-  - test case: filtered layer unit history moving back in depth w/ netview
-  test2.proj!!
 
 ------------------
 hv model
@@ -48,6 +43,8 @@ for setting network stats vars on dmem_timing.
   if model recognizes object at t, pvlv gets reward
   cs association with good look decisions drives reward at t-1
 
+--------------------
+* view colors: enum with different built-in styles
 
 --------------------
 * netview: 
