graphview fully functional!  user data stuff now working too from dataanal -- you can create a cluster plot or a distance matrix and get a good looking result right away!

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,19 +5,14 @@ commit:
 ------------------
 * graphview: 
 
-  - panel!
-  - CNT axis in panel; test..
+  - add data_spacing?
   - 0 axis range causing problems somewhere (source of non-visibility on startup?)
-  - mat z index not working (axis probably -- need a dummy axis)
-  - shared axis: update ranges
-  - error bars: build into graph line
-  - raster plots
+  - scrollbar stretch
 
 ------------------
 * gridview: 
 
-  - dataanal defaults: distmatrixgrid: n_rows = 1, TOP_ZERO
-  - more room on top line of panel for ctrls.
+  - more room on top line of panel for ctrls: z height
 
   - struct update debug on hv model
   - when editing a datatable_impl, need to send refresh update to display
@@ -96,6 +91,7 @@ for setting network stats vars on dmem_timing.
 Program issues
 
 * proglib: add dates!
+* dirty!!
 
 * edit user script: non-modal dialog w/ better (narrower) default sizing
 
